editor/sass/editor.scss
@import 'variables';
@import 'fonts';


html {
    height: 100%;
    overflow: hidden;
}
body {
    @extend .font-regular;
    min-height: 100%;
    height: 100%;
    overflow: hidden;
    margin: 0;
    font-size: 14px;
    color: #eee;
}

strong {
    @extend .font-bold;
}

[draggable=true] {
    -khtml-user-drag: element;
}

.noSelect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

#ui-root {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: auto;
    height: auto;
}

#ui-toolbar {
    > .content {
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        width: 45px;
        height: auto;
        background-color: #293538;

        > .ui-button {
            display: block;
            margin: 0;
            padding: 0;
            width: 45px;
            height: 45px;
            border: none;
            overflow: hidden;

            &.logo {
                background-image: url("https://s3-eu-west-1.amazonaws.com/static.playcanvas.com/images/editor_logo.png");
                background-size: 92px 46px;
                background-repeat: no-repeat;
                background-position: -1px -1px;

                &:hover {
                    background-position: -47px -1px;
                }
            }
            &.icon {
                color: #9ba1a3;
                line-height: 43px;
                @extend .font-icon;
                font-size: 24px;
                text-align: center;
                background-color: #364346;

                &.active {
                    color: $text-primary;
                    background-color: $bcg-darkest;

                    &:hover,
                    &:focus {
                        background-color: mix($bcg-dark, $bcg-darkest, 50%);
                    }
                }
                &.disabled {
                    opacity: 1;
                    color: mix(#9ba1a3, #364346, 30%);

                    &:hover,
                    &:focus {
                        color: mix(#9ba1a3, #364346, 30%);
                        background-color: #364346;
                    }
                }
                &:hover,
                &:focus {
                    color: $text-primary;
                    background-color: $bcg-dark;
                }
            }
            &.designer-settings {
                position: absolute;
                left: 0;
                bottom: 0;
                background-color: $bcg-darker;
            }
        }
    }
}

#ui-bottom {
    height: 24px;
    line-height: 24px;
    background-color: $bcg-darkest;
    // background-color: #111;

    > .content {
        padding: 0 8px;
        overflow: hidden;

        > .status {
            float: left;
            margin: 0;
            line-height: 24px;
            font-size: 12px;
            color: #aaa;

            &.error {
                color: #fb222f;
            }
        }
        > .jobsProgress {
            position: absolute;
            top: 10px;
            right: 24px;
            opacity: 0;
            visibility: hidden;
            transition: opacity 100ms, visibility 100ms;

            &.active {
                opacity: 1;
                visibility: visible;
            }
        }
        > .jobsCount {
            position: absolute;
            top: 0;
            right: 0;
            margin: 0;
            width: 24px;
            line-height: 24px;
            font-size: 12px;
            color: $text-darkest;
            text-align: center;
        }
    }
}

#canvas-3d {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    width: auto;
    height: auto;
}

.ui-panel {
    > .content > .ui-panel.overlay {
        z-index: 10;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        left: 0;
        width: auto;
        height: auto;
        // background-color: #293538;

        opacity: 1;
        visibility: visible;
        transition: visibility 100ms, opacity 100ms;

        &.hidden {
            display: block;
            visibility: hidden;
            opacity: 0;
        }

        > .content {
            height: 100%;

            > .ui-progress {
                width: 128px;
                height: 4px;
                position: absolute;
                top: 50%;
                left: 50%;
                margin: -2px 0 0 -64px;
            }
        }
    }
}
/* ... */

